--- a/DZ1/index.html
+++ b/DZ1/index.html
@@ -21,22 +21,32 @@
     <h1>Лучшие цветы</h1>
     <div class="vid">
         <section class="vid-flower">
-            <div class="vid-flower-all">
+            <div class="vid-flower-all1">
                 <img src="./flower.png" alt="">
-                <p class="vid1">Букет "Радость"</p>
-                <p class="info">Букет из самых красивых цветов в 3-х цветовых решениях</p>
+                <p class="vid-text">Букет "Радость"</p>
+                <p class="info-text">Букет из самых красивых цветов в 3-х цветовых решениях</p>
             </div>
-            <div class="vid-flower-all">
+            <div class="vid-flower-all2">
                 <img src="./tulip.png" alt="" srcset="">
-                <p class="vid1">Букет “Счастье”</p>
-                <p class="info">Букет из нежных тюльпанов белого и розового цвета</p>
+                <p class="vid-text">Букет “Счастье”</p>
+                <p class="info-text">Букет из нежных тюльпанов белого и розового цвета</p>
             </div>
-            <div class="vid-flower-all">   
+            <div class="vid-flower-all3">   
                 <img src="./pink-cosmos.png" alt="">
-                <p class="vid1">Букет “Вечеринка”</p>
-                <p class="info">Яркий букет из летних цветов для лучшего настроения </p>
+                <p class="vid-text">Букет “Вечеринка”</p>
+                <p class="info-text">Яркий букет из летних цветов для лучшего настроения </p>
             </div>    
         </section>
     </div>
+   <div style="background-color: coral;"></div>
+   <hr style="position: absolute;
+   width: 1137.5px;
+   height: 0px;
+   left: 509px;
+top: 560px;
+height: 1px;
+background-color: rgb(238, 212, 202);
+margin: auto;
+border: 1px solid #DEDBDB;">
 </body>
 </html>
