--- a/DZ1/index.html
+++ b/DZ1/index.html
@@ -38,15 +38,23 @@
             </div>    
         </section>
     </div>
-   <div style="background-color: coral;"></div>
-   <hr style="position: absolute;
-   width: 1137.5px;
-   height: 0px;
-   left: 509px;
-top: 560px;
-height: 1px;
-background-color: rgb(238, 212, 202);
-margin: auto;
-border: 1px solid #DEDBDB;">
+    <div class="line"></div>
+    <div class="text-stix">
+        <p class="text-stix-style">Цветы цветут повсюду для всех, кто только хочет их видеть.<br />(Дороти Роув)</p>
+    </div>
+    <div class="line2"></div>
+    <p class="test-stix2">
+        Сирень распустилась у двери твоей <br />
+        И лиловыми манит кистями: <br />
+        О, выйди! Опять любоваться мы ей <br />
+        Восхищенными будем глазами. <br />
+        Смотри: гнутся ветви все в пышном цвету, <br />
+        Как обильны они и пушисты! <br />
+        Недолго глядеть нам на их красоту <br />
+        И вдыхать этот запах душистый.</p>
+    <div class="byket">
+        <img src="./byket.png" alt="">
+    </div>
+    <footer>Flower, 2005 - 2021</footer>
 </body>
 </html>
