--- a/DZ1/index.html
+++ b/DZ1/index.html
@@ -1,60 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Лучшие букеты</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <div class="Flower">
-                <img src="./Group 2 1.png" width="100">
-            </div>
-            <div class="contact">
-                <img src="./contact.png" alt="">
-            </div>
-        </header>
+      <header>
+        <div class="Flower">
+          <img src="./Group 2 1.png" width="100" />
+        </div>
+        <div class="contact">
+          <img src="./contact.png" alt="" />
+        </div>
+      </header>
     </div>
     <h1>Лучшие цветы</h1>
     <div class="vid">
-        <section class="vid-flower">
-            <div class="vid-flower-all1">
-                <img src="./flower.png" alt="">
-                <p class="vid-text">Букет "Радость"</p>
-                <p class="info-text">Букет из самых красивых цветов в 3-х цветовых решениях</p>
-            </div>
-            <div class="vid-flower-all2">
-                <img src="./tulip.png" alt="" srcset="">
-                <p class="vid-text">Букет “Счастье”</p>
-                <p class="info-text">Букет из нежных тюльпанов белого и розового цвета</p>
-            </div>
-            <div class="vid-flower-all3">   
-                <img src="./pink-cosmos.png" alt="">
-                <p class="vid-text">Букет “Вечеринка”</p>
-                <p class="info-text">Яркий букет из летних цветов для лучшего настроения </p>
-            </div>    
-        </section>
+      <section class="vid-flower">
+        <div class="vid-flower-all1">
+          <img src="./flower.png" alt="" />
+          <p class="vid-text">Букет "Радость"</p>
+          <p class="info-text">
+            Букет из самых красивых цветов в 3-х цветовых решениях
+          </p>
+        </div>
+        <div class="vid-flower-all2">
+          <img src="./tulip.png" alt="" srcset="" />
+          <p class="vid-text">Букет “Счастье”</p>
+          <p class="info-text">
+            Букет из нежных тюльпанов белого и розового цвета
+          </p>
+        </div>
+        <div class="vid-flower-all3">
+          <img src="./pink-cosmos.png" alt="" />
+          <p class="vid-text">Букет “Вечеринка”</p>
+          <p class="info-text">
+            Яркий букет из летних цветов для лучшего настроения
+          </p>
+        </div>
+      </section>
     </div>
     <div class="line"></div>
     <div class="text-stix">
-        <p class="text-stix-style">Цветы цветут повсюду для всех, кто только хочет их видеть.<br />(Дороти Роув)</p>
+      <p class="text-stix-style">
+        Цветы цветут повсюду для всех, кто только хочет их видеть.<br />(Дороти
+        Роув)
+      </p>
     </div>
     <div class="line2"></div>
     <p class="test-stix2">
-        Сирень распустилась у двери твоей <br />
-        И лиловыми манит кистями: <br />
-        О, выйди! Опять любоваться мы ей <br />
-        Восхищенными будем глазами. <br />
-        Смотри: гнутся ветви все в пышном цвету, <br />
-        Как обильны они и пушисты! <br />
-        Недолго глядеть нам на их красоту <br />
-        И вдыхать этот запах душистый.</p>
+      Сирень распустилась у двери твоей <br />
+      И лиловыми манит кистями: <br />
+      О, выйди! Опять любоваться мы ей <br />
+      Восхищенными будем глазами. <br />
+      Смотри: гнутся ветви все в пышном цвету, <br />
+      Как обильны они и пушисты! <br />
+      Недолго глядеть нам на их красоту <br />
+      И вдыхать этот запах душистый.
+    </p>
     <div class="byket">
-        <img src="./byket.png" alt="">
+      <img src="./byket.png" alt="" />
     </div>
     <footer>Flower, 2005 - 2021</footer>
-</body>
+  </body>
 </html>
